@@ -29,6 +29,10 @@ AC_SUBST(LT_CURRENT, 16)
 AC_SUBST(LT_REVISION, 43)
 AC_SUBST(LT_AGE, 5)
 
+# For DEF file.
+DLL_VERSION=`expr ${LT_CURRENT} - ${LT_AGE}`
+AC_SUBST(DLL_VERSION)
+
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE([1.10 -Wall -Werror -Wno-override])
